--- a/07.AJAX.md
+++ b/07.AJAX.md
@@ -30,7 +30,7 @@ Cuando apareció por primera vez la clase XMLHttpRequest, ésta estaba orientada
 **Ejemplo**
 
 ```javascript
-var xhr = new XMLHttpRequest();
+let xhr = new XMLHttpRequest();
 xhr.onreadystatechange = function() {
   if (this.readyState == 4 && this.status == 200) {
     console.log ( this.responseText );
@@ -61,14 +61,14 @@ Con la versión 2 además se pueden hacer petición de datos binarios (**blob** 
   <progress id="progreso" value="0"></progress>
 
   <script>
-var xhr = new XMLHttpRequest();
+let xhr = new XMLHttpRequest();
 xhr.open('GET', 'https://rickandmortyapi.com/api/character/avatar/5.jpeg', true);
 xhr.responseType = 'blob';
 
 xhr.onload = function(e) {
   if (this.status == 200) {
     // Note: .response instead of .responseText
-    var blob = new Blob([this.response], {type: 'image/jpeg'});
+    let blob = new Blob([this.response], {type: 'image/jpeg'});
   }
 };
 
@@ -101,14 +101,14 @@ xhr.send();
   <progress id="progreso" value="0"></progress>
 
   <script>
-var xhr = new XMLHttpRequest();
+let xhr = new XMLHttpRequest();
 xhr.open('GET', 'https://mainline.i3s.unice.fr/mooc/LaSueur.mp3', true);
 xhr.responseType = 'blob';
 
 xhr.onload = function(e) {
   if (this.status == 200) {
     // Note: .response instead of .responseText
-    var blob = new Blob([this.response], {type: 'audio/mp3'});
+    let blob = new Blob([this.response], {type: 'audio/mp3'});
   }
 };
 
