--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -118,6 +118,18 @@ console.log ( c + parseFloat(b) ); // 73.01
 c.toString();                      // "50", es string
 ```
 
+Hemos usado las funciones `parseInt`, `parseFloat` y el método `toString` para realizar conversiones entre numeros y texto. También es posible realizar conversiones utilizando las formas siguientes:
+
+
+```javascript
+Number(a)
+Number(b)
+String(c)
+```
+> **NOTA**:
+>
+> También existen lost tipos `Boolean` y `BigInt`, y algunos más. Para más detalles consultar: https://developer.mozilla.org/es/docs/Web/JavaScript/Data_structures 
+
 > ACTIVIDAD PROPUESTA: Ejecuta las siguientes sentencias y explica que hacen:
 >```javascript
 >    let a = "FF";
