--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -426,6 +426,81 @@ pepe.nombre = 'Juan';                 // pepe = { nombre: 'Juan', edad: 40 }
 
 ```
 
+# Tipos de valores
+
+## Falsy
+
+Un valor **`falsy`** es un valor que se considera `falso` cuando se encuentra en un contexto booleano.
+
+Son valores `falsy` los siguientes:
+
+- `false
+- `0
+- `-0
+- `0n`
+- `NaN`
+- `""`
+- `null`
+- `undefined`
+
+**Operador ||**
+
+Es un operador lógico binario, que **devuelve el segundo operando si el primer operando es `falsy`**, en otro caso devuelve el primer operando.
+
+```javascript 
+false || "texto"      // 'texto'
+null  || undefined    // undefined
+""    || 42           // 42
+```
+
+## Nullish
+
+Un valor **`nullish`** es el valor que forma parte de un subconjunto muy reducido de valores `falsy`. 
+
+Los valores `nullish` son únicamente los 2 siguientes:
+
+- `null`
+- `undefined`
+
+**Operador ??**
+
+Es un operador lógico binario, que **devuelve el segundo operando si el primer operando es `nullish`**, en otro caso devuelve el primer operando.
+
+```javascript 
+null        ?? "texto"     // 'texto'
+undefined   ?? ""          // ''
+false       ?? ""          // false
+```
+
+## Truthy
+
+Un valor **`truthy`** es un valor que se considera `true` cuando se encuentra en un contexto booleano. Todos los valores son verdaderos a menos que se definan como falsos. Es decir, todos los valores son verdaderos excepto false, 0, -0, 0n, "", null, undefined, NaN y document.all
+
+Algunos ejemplos de valores `truthy`:
+
+- `true` 
+- `{}`
+- `[]`
+- `42`
+- `"0"`
+- `"false"`
+- `new Date()`
+- `-42`
+- `12n`
+- `3.14`
+- `-3.14`
+- `Infinity`
+- `-Infinity`
+
+**Operador &&**
+
+Es un operador lógico binario, que **devuelve el segundo operando si el primer operando es `truthy`**, en otro caso devuelve el primer operando.
+
+```javascript 
+true && "texto" // "texto"
+[] && ""        // ''
+"" && false     // ''
+```
 
 
 # Referencias
