--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -434,9 +434,9 @@ Un valor **`falsy`** es un valor que se considera `falso` cuando se encuentra en
 
 Son valores `falsy` los siguientes:
 
-- `false
-- `0
-- `-0
+- `false`
+- `0`
+- `-0`
 - `0n`
 - `NaN`
 - `""`
