--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -128,7 +128,7 @@ String(c)
 ```
 > **NOTA**:
 >
-> También existen lost tipos `Boolean` y `BigInt`, y algunos más. Para más detalles consultar: https://developer.mozilla.org/es/docs/Web/JavaScript/Data_structures 
+> También existen los tipos `Boolean` y `BigInt`, y algunos más. Para más detalles consultar: https://developer.mozilla.org/es/docs/Web/JavaScript/Data_structures 
 
 > ACTIVIDAD PROPUESTA: Ejecuta las siguientes sentencias y explica que hacen:
 >```javascript
