--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -85,6 +85,13 @@ let t1 = setTimeout  ( () => console.log ('Hola') ,  5000 );  // Hacemos uso de 
 let t2 = setInterval ( () => console.log ('Hola') ,  5000 );  // Hacemos uso de función anónima
 ```
 
+Para cancelar `setTimeout` y `setInterval` usaremos las funciones **`clearTimeout`** y **`clearInterval`**. Ejemplo:
+```javascript
+clearTimeout(t1);
+clearInterval(t2);
+``` 
+
+
 Un caso específico a las funciones `setTimeout` y `setInterval` es que se le pueden pasar más argumentos. Todos los argumentos que aparezcan detrás de los milisegundos serán argumentos que serán pasados al callback. Por ejemplo, a continuación tenemos una función suma que utilizaremos como callback. Dicha función necesita dos argumentos para poder operar. Estos argumentos son los que escribimos como 3er y 4o argumento de `setTimeout`.
 
 ```javascript
@@ -541,6 +548,23 @@ function mostrar(mensaje, msEspera) {
 mensajes();
 ```
 
+
+**Ejemplo 4**
+
+```javascript
+function sleep (ms) {
+  return new Promise(resolve => setTimeout(resolve, ms))
+}
+
+async function mensajes () {
+  await sleep(1000); console.log('Este es el primer mensaje')
+  await sleep(1500); console.log('Este es el segundo mensaje')
+  await sleep(2000); console.log('Este es el tercer mensaje')
+  await sleep(800); console.log('Este es el cuarto mensaje')
+}
+
+mensajes()
+```
 
 # Referencias
 
