--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -304,6 +304,13 @@ copia_profunda.direccion.calle = "ancha";
 persona.direccion.calle;      // "antigua"; 
 ```
 
+> **NOTA:**
+>
+> - **`JSON.stringify()`** convierte un `Objeto Javascript` a `String`
+> - **`JSON.parse()`** convierte un `String` a `Objeto Javascript`.
+
+
+
 
 ## Propiedades y métodos
 
