--- a/08.APIS.md
+++ b/08.APIS.md
@@ -58,6 +58,16 @@ Los dos mecanismos en el almacenamiento web son los siguientes:
 
 <hr>
 
+## Fullscreen
+
+**Presentación a pantalla completa en el cliente**
+
+La API fullscreen proporciona una manera fácil de presentar contenido web usando la pantalla completa del usuario y salir del modo de pantalla completa una vez que ya no sea necesario. Esto hace posible presentar el contenido deseado, como un juego en línea, utilizando toda la pantalla del usuario, eliminando todos los elementos de la interfaz de usuario del navegador y otras aplicaciones de la pantalla hasta que se apaga el modo de pantalla completa. .
+
+- [Documentación](https://developer.mozilla.org/en-US/docs/Web/API/Fullscreen_API)
+
+<hr>
+
 ## Vibration
 
 **Ofrece funcionalidad de vibración en dispositivos que lo soporten, como teléfonos móviles**
