--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -292,7 +292,23 @@ console.log ({ edad, nombre, apellidos})       // Uncaught ReferenceError: apell
 > ```
 > persona = { nombre, edad }
 > ```
-> 
+
+## Recorrido de arrays y objetos
+
+En Javascript disponemos del bucle **`for ... in`** que permite recorrer tanto arrays como objetos.
+
+**Ejemplo**
+
+```javascript
+let array = [ 'Sevilla', 'Montilla', 'Moriles' ]
+for (let indice in array) console.log( indice, objeto[indice])
+ 
+
+let objeto = { nombre: 'pepe', edad: 22, 'localidad': 'Montilla' }
+for (let key in objeto) console.log( key, objeto[key])
+```
+
+
 ## Operarador de expansión (spread operator)
 
 La sintaxis de propagación ( **`...`** ) permite que un iterable, como una expresión de array o una cadena, se expanda en lugares donde se esperan cero o más argumentos (para llamadas a funciones) o elementos (para literales de array), o que se expanda una expresión de objeto en lugares donde se esperan cero o más pares clave-valor (para objetos literales).
