--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -301,7 +301,7 @@ En Javascript disponemos del bucle **`for ... in`** que permite recorrer tanto a
 
 ```javascript
 let array = [ 'Sevilla', 'Montilla', 'Moriles' ]
-for (let indice in array) console.log( indice, objeto[indice])
+for (let indice in array) console.log( indice, array[indice])
  
 
 let objeto = { nombre: 'pepe', edad: 22, 'localidad': 'Montilla' }
