--- a/08.APIS.md
+++ b/08.APIS.md
@@ -87,6 +87,29 @@ WebRTC es una tecnología que permite a aplicaciones y sitios web capturar y opc
 - [Documentación](https://developer.mozilla.org/es/docs/Web/API/WebRTC_API)
 
 <hr>
+
+## Picture in Picture
+
+**Permite a los sitios web crear una ventana de vídeo flotante y siempre visible.**
+
+Esto permite a los usuarios seguir consumiendo medios mientras interactúan con otros sitios o aplicaciones en su dispositivo.
+
+- [Documentación](https://developer.mozilla.org/en-US/docs/Web/API/Picture-in-Picture_API)
+
+<hr>
+
+
+## Speech
+
+**Permite incorporar datos de voz en aplicaciones web.**
+
+La API Web `Speech` tiene dos partes: 
+- **`SpeechSynthesis`** (Texto a voz)
+- **`SpeechRecognition`** (Reconocimiento de voz asincrónico).
+
+- [Documentación](https://developer.mozilla.org/en-US/docs/Web/API/Web_Speech_API)
+
+
 <hr>
 
 ## Referencias
