--- a/08.APIS.md
+++ b/08.APIS.md
@@ -88,6 +88,30 @@ WebRTC es una tecnología que permite a aplicaciones y sitios web capturar y opc
 
 <hr>
 
+## Canvas
+
+**Proporciona un medio para dibujar gráficos a través de JavaScript y el elemento HTML `<canvas>`.**
+
+Entre otras cosas, se puede utilizar para animación, gráficos de juegos, visualización de datos, manipulación de fotografías y procesamiento de vídeo en tiempo real.
+Se centra principalmente en gráficos 2D.
+
+La API de Canvas es extremadamente poderosa, pero no siempre es fácil de usar. Existen bibliotecas que pueden hacer que la creación de proyectos basados ​​en lienzo sea más rápida y sencilla.
+
+- [Documentación](https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API)
+
+<hr>
+
+## WebGL
+
+**Permite representar gráficos 3D y 2D interactivos de alto rendimiento dentro de cualquier navegador web compatible sin el uso de complementos.**
+
+La compatibilidad con WebGL está presente en todos los navegadores modernos; sin embargo, el dispositivo del usuario también debe tener hardware que admita estas funciones.
+
+- [Documentación](https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API)
+ 
+<hr>
+
+
 ## Picture in Picture
 
 **Permite a los sitios web crear una ventana de vídeo flotante y siempre visible.**
