--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -305,7 +305,7 @@ for (let indice in array) console.log( indice, array[indice])
  
 
 let objeto = { nombre: 'pepe', edad: 22, 'localidad': 'Montilla' }
-for (let key in objeto) console.log( key, objeto[key])
+for (let propiedad in objeto) console.log( propiedad, objeto[propiedad])
 ```
 
 
