--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -242,6 +242,33 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 > let numOrdenadosInv = numeros.toSorted( (a,b) => b-a ); // Orden descendente    
 > ```
 
+### Crear elementos
+
+Javascript dispone del método **[Array.from](https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Global_Objects/Array/from)** que puede resultar muy útil en ciertos momentos, sobre todo si necesitamos crear arrays con un gran número de elementos.
+
+A continuación se muestran algunos ejemplos de uso:
+
+```js
+// Obtenemos array cuyos elementos son cada una de las letras del string
+Array.from("foo");  // [ "f", "o", "o" ]
+
+// Obtenemos array cuyos elementos son el doble del array original
+Array.from([1, 2, 3], (x) => x + x); // [2, 4, 6]
+
+// Obtenemos array con 50 números entre 0 y 49
+Array.from({ length: 50 }, (value, index) => index);   
+
+// Obtenemos array con 100 números aleatorios entre 0 y 1
+Array.from({ length: 100 }, () => Math.random() )
+
+// Obtenemos array con 100 puntos aleatorios con coordenadas {x, y} entre 0 y 1
+Array.from({ length: 100 }, () => ({
+                x: Math.random(),
+                y: Math.random(),
+}))
+``` 
+
+
 ### Tratar los elementos
 
 Tres métodos muy interesantes para trabajar con arrays, y para objetos también, son:
