--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -183,7 +183,7 @@ let extraido = numeros.splice (2, 3);   // [40, 30, 100, 20, 10, 1, 1, 2, 2 ] , 
 
 
 
-### Hacer copia de un array
+### Hacer copia completa o parcial de un array
 
 ```javascript
 // el método slice tiene la siguiente forma:
@@ -394,3 +394,24 @@ El encadenamiento de métodos es una técnica que podemos utilizar siempre que s
 >
 > - En lugar de calcular la suma de edades de los desarrolladores web, ¿cómo calcularíamos la media de edad de los desarrolladores web? 
 
+
+### Uso correcto
+
+Tanto el método `map` como el método `filter`, éste último en menor medida, se usan de forma bastante frecuente en Javascript.
+A la hora de usarlos debemos hacerlo de forma correcta. Debemos tener en cuenta que:
+
+- **Se aplican únicamente sobre un array** original, que no es modificado
+- **Devuelven un nuevo array** con los valores resultantes de la operación
+- Para devolver cada valor debemos hacerlo como se muestra a continuación
+
+**BIEN**
+```js
+desarrolladores.map( x => x.nombre )            // [ 'Juan', 'Inma', 'Ana', 'Eva', 'José' ]  
+desarrolladores.map( x => { return x.nombre } ) // [ 'Juan', 'Inma', 'Ana', 'Eva', 'José' ]
+```
+
+**MAL** 
+```js
+desarrolladores.map( x => { x.nombre} )     // [ undefined, undefined, undefined, undefined, undefined ]
+desarrolladores.map( x => return x.nombre ) // Uncaught SyntaxError: Unexpected token 'return'
+```
