--- a/07.AJAX.md
+++ b/07.AJAX.md
@@ -226,11 +226,12 @@ Para el siguiente ejemplo, necesitarás obtener una API Key desde https://thedog
 </html>
 ```
 
-
+> **NOTA:** El método `fetch` forma parte de la `API Fetch` que también incluye a las interfaces [`Request`](https://developer.mozilla.org/es/docs/Web/API/Request), [`Response`](https://developer.mozilla.org/es/docs/Web/API/Response) y [`Headers`](https://developer.mozilla.org/es/docs/Web/API/Headers).
 
 ## Referencias
 
 - [XMLHttpRequest 2](https://www.html5rocks.com/en/tutorials/file/xhr2/)
+- [API Fetch](https://developer.mozilla.org/es/docs/Web/API/Fetch_API)
 - [CORS](https://developer.mozilla.org/es/docs/Web/HTTP/Access_control_CORS)
 - [Algunas APIs Web públicas](https://github.com/toddmotto/public-apis)
 - [Muchas APIs Web públicas](https://www.programmableweb.com/category/all/apis)
