--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -51,6 +51,7 @@ let f1 = new Date(2017, 00, 01, 22, 30, 00, 999);  // 1 Enero de 2017, 22:30:00.
 let f2 = new Date(2017, 00, 01, 22, 30, 00);       // 1 Enero de 2017, 22:30:00
 let f3 = new Date(2017, 00, 01, 22, 30);           // 1 Enero de 2017, 22:30:00
 let f4 = new Date(2017, 00, 01);                   // 1 Enero de 2017, 00:00:00
+let f5 = new Date();                               // Fecha y hora actual
 ```
 
 Otra forma de llamar al constructor es:
@@ -75,6 +76,38 @@ let f2 = new Date("2017-01-01T23:30:00+01:00");   // Hora de España
 let f3 = new Date("2017-01-01T23:30:00-05:00");   // Hora de Nueva York
 let f4 = new Date("2017-01-01T23:30:00Z");        // Hora de Londres y Canarias, a nosotros nos aparecerá una hora más 
 ```
+
+**Conversión de Date a String**
+
+Suele ser habitual la conversión del tipo *date* al tipo `string`. Para ello podemos usar el método `toISOString`
+
+```javascript
+let f1 = new Date()          // type object date
+let s1 = f1.toISOString()    // type string
+```
+
+**Extracción de fecha**
+
+Para obtener sólo la fecha, sin la hora, podemos hacer:
+
+```javascript
+let f1 = new Date()          // type object date
+let s1 = f1.toISOString()    // type string
+
+let fecha = s1.split('T')[0] // type string 
+``` 
+
+**Extracción de hora**
+
+Para obtener sólo la hora, sin la fecha, podemos hacer:
+
+```javascript
+let f1 = new Date()          // type object date
+let s1 = f1.toISOString()    // type string
+
+let fecha = s1.split('T')[1] // type string 
+``` 
+
 
 
 ## RegExp (Expresiones Regulares)
