--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -105,7 +105,11 @@ Para obtener sólo la hora, sin la fecha, podemos hacer:
 let f1 = new Date()          // type object date
 let s1 = f1.toISOString()    // type string
 
-let fecha = s1.split('T')[1] // type string 
+// Todas la variables que aparecen a continuación son de tipo string
+
+let hora = s1.split('T')[1] 
+let horaSinZ = s1.split('T')[1].split('Z')[0]
+let horaSinMS = s1.split('T')[1].split('.')[0]
 ``` 
 
 
