--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -347,6 +347,38 @@ persona.direccion.calle;      // "antigua";
 > - **`JSON.parse()`** convierte un `String` a `Objeto Javascript`.
 
 
+## Serialización
+
+Aprovechamos la ocasión de haber visto previamente las funciones **`JSON.stringify()`** y **`JSON.parse()`** para hablar de la serialización.
+
+**¿QUÉ SE ENTIENDE POR SERIALIAR?**
+Serializar es pasar unos datos "paralelos" o compuestos a datos "serie" o simples. Por ejemplo, pasar un objeto a un string.
+Un string se considera un dato serie puesto que está compuesto por una serie de caracteres uno tras otro.
+
+
+**CUANDO SERIALIZAR**
+
+```js
+const string = await JSON.stringfy(objeto)
+```
+La serialización es necesaria en los siguientes escenarios:
+
+- Al enviar información por la red
+- Al guardar información en un archivo
+- Al pasar información desde un componente servidor a un componente cliente en NextJS
+
+
+**CUANDO DESERIALIZAR**
+
+```js
+const objeto = await JSON.parse(string)
+```
+
+La deserialización es necesaria en los siguientes escenarios:
+
+- Al recibir información de la red
+- Al leer información en un archivo
+- Al recibir información un componente cliente desde un componente servidor en NextJS
 
 
 ## Propiedades y métodos
