--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -353,8 +353,7 @@ Aprovechamos la ocasión de haber visto previamente las funciones **`JSON.string
 
 **¿QUÉ SE ENTIENDE POR SERIALIAR?**
 
-Serializar es pasar unos datos "paralelos" o compuestos a datos "serie" o simples. Por ejemplo, pasar un objeto a un string.
-Un string se considera un dato serie puesto que está compuesto por una serie de caracteres uno tras otro.
+Simplificando mucho, podemos decir que serializar es pasar unos datos "paralelos" o compuestos a datos "serie" o simples. Por ejemplo, pasar un objeto a un string. Un string se considera un dato serie puesto que está compuesto por una serie de caracteres uno tras otro.
 
 
 **CUANDO SERIALIZAR**
