--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -356,7 +356,7 @@ Aprovechamos la ocasión de haber visto previamente las funciones **`JSON.string
 Simplificando mucho, podemos decir que serializar es pasar unos datos "paralelos" o compuestos a datos "serie" o simples. Por ejemplo, pasar un objeto a un string. Un string se considera un dato serie puesto que está compuesto por una serie de caracteres uno tras otro.
 
 
-**CUANDO SERIALIZAR**
+**CÓMO Y CUÁNDO SERIALIZAR**
 
 ```js
 const string = await JSON.stringfy(objeto)
@@ -368,7 +368,7 @@ La serialización es necesaria en los siguientes escenarios:
 - Al pasar información desde un componente servidor a un componente cliente en NextJS
 
 
-**CUANDO DESERIALIZAR**
+**CÓMO Y CUÁNDO DESERIALIZAR**
 
 ```js
 const objeto = await JSON.parse(string)
