--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -326,6 +326,22 @@ copia_superficial.direccion.calle = "nueva";
 persona.direccion.calle;         // "nueva" 
 ```
 
+### Copia superficial (Operador de expansión `...`)
+
+Existe **una forma más moderna** de realizar la copia superficial, y es usando el operador de expansion:
+
+```javascript
+let persona = { nombre:"José",  edad:30,  direccion: {calle: "antigua", num: 1} };
+let copia_superficial = { ...persona };    // shallow copy (copia superficial)
+
+copia_superficial.nombre = "Juan";
+persona.nombre;        // "José";
+
+// No se copian los valores de los objetos internos. Sólo se copia su referencia. Por tanto:
+copia_superficial.direccion.calle = "nueva";
+persona.direccion.calle;         // "nueva" 
+```
+
 ### Copia profunda (`JSON.parse` y `JSON.stringify`)
 
 Para un clonado profundo, necesitamos usar otra alternativa ya que Object.assign() copia valores de propiedades. Si el valor en la fuente es una referencia a un objeto, solo se copia la referencia en sí, como valor de la propiedad.
@@ -346,8 +362,7 @@ persona.direccion.calle;      // "antigua";
 > - **`JSON.stringify()`** convierte un `Objeto Javascript` a `String`
 > - **`JSON.parse()`** convierte un `String` a `Objeto Javascript`.
 
-
-## Serialización
+### Serialización
 
 Aprovechamos la ocasión de haber visto previamente las funciones **`JSON.stringify()`** y **`JSON.parse()`** para hablar de la serialización.
 
@@ -378,7 +393,24 @@ La deserialización es necesaria en los siguientes escenarios:
 
 - Al recibir información de la red
 - Al leer información en un archivo
-- Al recibir información un componente cliente desde un componente servidor en NextJS
+- Al recibir información un componente cliente desde un componente servidor en NextJS ???
+
+
+### Copia profunda (`structuredClone`)
+
+Existe **una forma más moderna** de realizar la copia profunda, y es usando la función `structuredClone`:
+
+```javascript
+let persona = { nombre:"José",  edad:30,  direccion: {calle: "antigua", num: 1} };
+
+// deep copy (copia profunda)
+let copia_profunda = structuredClone(persona);
+
+// Se copian los valores de los objetos internos. Por tanto:
+copia_profunda.direccion.calle = "ancha";
+persona.direccion.calle;      // "antigua"; 
+```
+
 
 
 ## Propiedades y métodos
