--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -406,12 +406,14 @@ A la hora de usarlos debemos hacerlo de forma correcta. Debemos tener en cuenta 
 
 **BIEN**
 ```js
-desarrolladores.map( x => x.nombre )            // [ 'Juan', 'Inma', 'Ana', 'Eva', 'José' ]  
+desarrolladores.map( x => x.nombre )            // [ 'Juan', 'Inma', 'Ana', 'Eva', 'José' ]
+desarrolladores.map( x => (x.nombre) )          // [ 'Juan', 'Inma', 'Ana', 'Eva', 'José' ] 
 desarrolladores.map( x => { return x.nombre } ) // [ 'Juan', 'Inma', 'Ana', 'Eva', 'José' ]
 ```
 
 **MAL** 
 ```js
-desarrolladores.map( x => { x.nombre} )     // [ undefined, undefined, undefined, undefined, undefined ]
-desarrolladores.map( x => return x.nombre ) // Uncaught SyntaxError: Unexpected token 'return'
+desarrolladores.map( x => { x.nombre} )        // [ undefined, undefined, undefined, undefined, undefined ]
+desarrolladores.map( x => (return x.nombre) )  // Uncaught SyntaxError: Unexpected token 'return'
+desarrolladores.map( x => return x.nombre )    // Uncaught SyntaxError: Unexpected token 'return'
 ```
