--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -467,6 +467,7 @@ Es un operador lógico binario, que **devuelve el segundo operando si el primer 
 false || "texto"      // 'texto'
 null  || undefined    // undefined
 ""    || 42           // 42
+NaN   || 42           // 42
 ```
 
 ## Nullish
@@ -484,8 +485,9 @@ Es un operador lógico binario, que **devuelve el segundo operando si el primer 
 
 ```javascript 
 null        ?? "texto"     // 'texto'
-undefined   ?? ""          // ''
-false       ?? ""          // false
+undefined   ?? "texto"     // 'texto'
+false       ?? "texto"     // false
+NaN         ?? "texto"     // NaN
 ```
 
 ## Truthy
