--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -520,6 +520,22 @@ true && "texto" // "texto"
 "" && false     // ''
 ```
 
+> **NOTA**:
+>
+> NaN significa "Not a Number" y es un valor especial en JavaScript. Representa el resultado de una operación matemática indefinida o errónea. El comportamiento de NaN puede resultar confuso para los desarrolladores, ya que no es igual a ningún otro valor en JavaScript, incluido él mismo.
+>
+> ```js
+> 0/0         // NaN
+> 0/0 == NaN  // false
+> NaN == NaN  // false
+> ```
+> Para comprobar si un valor o variables es NaN debemos usar el método **`Number.isNaN`**
+> ```js
+> Number.isNaN(0/0)  // true
+> Number.isNaN( NaN ) // true
+> ```
+
+
 
 # Referencias
 
