--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -529,10 +529,10 @@ true && "texto" // "texto"
 > 0/0 == NaN  // false
 > NaN == NaN  // false
 > ```
-> Para comprobar si un valor o variables es NaN debemos usar el método **`Number.isNaN`**
+> Para comprobar si un valor o variable es NaN debemos usar el método **`Number.isNaN`**
 > ```js
-> Number.isNaN(0/0)  // true
-> Number.isNaN( NaN ) // true
+> Number.isNaN( 0/0 )  // true
+> Number.isNaN( NaN )  // true
 > ```
 
 
