--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -212,6 +212,20 @@ let trozo = numeros.slice(1, 3);          // desde elemento segundo hasta el cua
 > - ¿Qué método se utiliza para concatenar 2 arrays? Pon un ejemplo.
 
 
+### Invertir orden de los elementos
+
+```javascript
+let numeros = [ 2, 20, 2, 1, 10, 1, 100 ];
+numeros.reverse();       // [100, 1, 10, 1, 2, 20, 2]
+```
+
+> NOTA: **El método anterior modifica el array**.
+> Si deseamos que el array original no se modifique, usaremos la función `toReversed`.
+> ```javascript
+> let numReversed  = numeros.toReversed(); 
+> ```
+
+
 
 ### Ordenar elementos
 
@@ -221,21 +235,21 @@ numeros.sort();                       // [1, 1, 10, 100, 2, 2, 20]
 numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 ```
 
-> NOTA: los métodos `sort()` y `reverse()` realizan una ordenación alfábetica.
+> NOTA: el método `sort()` realiza una ordenación alfábetica.
 >
 >```javascript
 >// para realizar una ordenación númerica pasamos una función de comparación
 >
 >numeros.sort( function(a, b){return a-b} );     // [1, 1, 2, 2, 10, 20, 100]  
->numeros.reverse( function(a, b){return b-a} );  // [100, 20, 10, 2, 2, 2, 1, 1]
+>numeros.sort( function(a, b){return b-a} );     // [100, 20, 10, 2, 2, 2, 1, 1]
 >
 >// Podemos simplicar haciendo uso de funciones flecha
 >numeros.sort( (a, b) => a-b );     // [1, 1, 2, 2, 10, 20, 100]  
->numeros.reverse( (a, b) => b-a );   // [100, 20, 10, 2, 2, 2, 1, 1]
+>numeros.sort( (a, b) => b-a );     // [100, 20, 10, 2, 2, 2, 1, 1]
 >
 >```
 
-> NOTA: **Los métodos anteriores modifican el array**.
+> NOTA: **El método anterior modifica el array**.
 > Si deseamos que el array original no se modifique, usaremos la función `toSorted`.
 > ```javascript
 > let numsOrdenados   = numeros.toSorted( (a,b) => a-b ); // Orden ascendente
