--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -282,6 +282,20 @@ Array.from({ length: 100 }, () => ({
 }))
 ``` 
 
+### Encontrar un elemento
+
+```js
+let desarrolladores = [
+ { id: 1, nombre: 'Juan', tipo: 'móvil', edad: 24 },
+ { id: 2, nombre: 'Inma', tipo: 'móvil', edad: 31 },
+ { id: 3, nombre: 'Ana',  tipo: 'web',   edad: 25 },
+ { id: 4, nombre: 'Eva',  tipo: 'web',   edad: 30 },
+ { id: 5, nombre: 'José', tipo: 'móvil', edad: 33 }
+];
+
+desarrolladores.find( desarrollador => desarrollador.id == 3 );  //  { id: 3, nombre: 'Ana',  tipo: 'web',   edad: 25 }
+```
+
 
 ### Tratar los elementos
 
