--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -284,6 +284,10 @@ Array.from({ length: 100 }, () => ({
 
 ### Encontrar un elemento
 
+Si deseamos buscar un elemento de un array, el siguiente método resulta de gran utilidad:
+
+- `find` : Busca el primer elemento que cumple una condición.
+
 ```js
 let desarrolladores = [
  { id: 1, nombre: 'Juan', tipo: 'móvil', edad: 24 },
@@ -293,15 +297,32 @@ let desarrolladores = [
  { id: 5, nombre: 'José', tipo: 'móvil', edad: 33 }
 ];
 
-desarrolladores.find( desarrollador => desarrollador.id == 3 );  //  { id: 3, nombre: 'Ana',  tipo: 'web',   edad: 25 }
+desarrolladores.find( desarrollador => desarrollador.id == 3 );
+// Devuelve { id: 3, nombre: 'Ana',  tipo: 'web',   edad: 25 }
+desarrolladores.find( desarrollador => desarrollador.id == 7 );
+// Devuelve undefined
 ```
 
+> NOTA:
+>
+> También existen los métodos `findLast`, así como `findIndex` y `findLastIndex`. Para mayor información, consultar la documentación oficial.
+
+> **PROGRAMACIÓN FUNCIONAL**:
+>
+> En el paradigma de programación funcional es posible pasar una función como argumento de otra función. Javascript soporta este paradigma, y un ejemplo de ello es el método anterior, así como los métodos que veremos en el apartado siguiente. El formato seguido es el siguiente:
+>
+> ```js
+> valorResultado  = array.find   ( /* función que comprueba condición sobre cada elemento hasta encontrarlo */) 
+> arrayResultado  = array.map    ( /* función que ejecuta operación sobre cada elemento */)
+> arrayResultado  = array.filter ( /* función que comprueba condición sobre cada elemento */) 
+> valorResultado  = array.reduce ( /* función que ejecuta operación sobre cada elemento */) 
+> ```
 
 ### Tratar los elementos
 
-Tres métodos muy interesantes para trabajar con arrays, y para objetos también, son:
+Tres métodos muy interesantes para trabajar con arrays, son:
 
-- `map` : Realiza una operación para cada uno de los elementos
+- `map`    : Realiza una operación para cada uno de los elementos
 - `filter` : Filtra los elementos deseados
 - `reduce` : Reduce los elementos a un valor
 
