--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -284,7 +284,7 @@ Array.from({ length: 100 }, () => ({
 
 ### Encontrar un elemento
 
-Si deseamos buscar un elemento de un array, el siguiente método resulta de gran utilidad:
+Si deseamos buscar un elemento en un array, el siguiente método resulta de gran utilidad:
 
 - `find` : Busca el primer elemento que cumple una condición.
 
