--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -663,15 +663,15 @@ let agenda = [
   { nombre: 'Juana', telefono: 111222333 }
 ];
 
-console.clear ();                           // Limpia la consola
-console.log   ('Mensaje de log');           // Muestra mensaje de log
-console.info  ('Mensaje de información');   // Muestra mensaje de información
-console.warn  ('Mensaje de aviso');         // Muestra mensaje de aviso
-console.error ('Mensaje de error');         // Muestra mensaje de error
-console.debug ('Mensaje de depuración');    // Muestra mensaje de depuración
-console.table (agenda);                     // Muestra en forma de tabla. Para navegador y nodejs
-console.time('id')
-console.timeEnd('id')                       // Muestra tiempo transcurrido desde console.time('id')
+console.clear  ();                           // Limpia la consola
+console.log    ('Mensaje de log');           // Muestra mensaje de log
+console.info   ('Mensaje de información');   // Muestra mensaje de información
+console.warn   ('Mensaje de aviso');         // Muestra mensaje de aviso
+console.error  ('Mensaje de error');         // Muestra mensaje de error
+console.debug  ('Mensaje de depuración');    // Muestra mensaje de depuración
+console.table  (agenda);                     // Muestra en forma de tabla. Para navegador y nodejs
+console.time   ('id')                        // Inicia temporizador  
+console.timeEnd('id')                        // Muestra tiempo transcurrido desde console.time('id')
 ```
 
 > NOTA: **En NodeJS, el objeto console existe por si mismo**, es decir, en NodeJS no podemos escribir window.console.
