--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -380,7 +380,7 @@ La serialización es necesaria en los siguientes escenarios:
 
 - Al enviar información por la red
 - Al guardar información en un archivo
-- Al pasar información desde un componente servidor a un componente cliente en NextJS
+- En algunos casos muy poco habituales, en NextJS, [al pasar información desde un componente servidor a un componente cliente o viceversa](https://react.dev/reference/rsc/use-server#serializable-parameters-and-return-values)
 
 
 **CÓMO Y CUÁNDO DESERIALIZAR**
