--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -16,7 +16,7 @@ let c = new String();    // objeto de clase String. A evitar. Debe usarse el tip
 let d = new Array();     // objeto de clase Array. A evitar. Debe usarse el tipo primitivo.
 let e = new Date();      // objeto de clase Date.
 let f = new RegExp();    // objeto de clase RegExp. A evitar.
-let g = new Function();  //getElementbyclass objeto de clase Function. A evitar.
+let g = new Function();  // getElementbyclass objeto de clase Function. A evitar.
 let h = new Object();    // objeto de clase Object genérico. A evitar.
 ```
 
@@ -393,7 +393,8 @@ La deserialización es necesaria en los siguientes escenarios:
 
 - Al recibir información de la red
 - Al leer información en un archivo
-- Al recibir información un componente cliente desde un componente servidor en NextJS ???
+- En algunos casos muy poco habituales, en NextJS, [al pasar información desde un componente servidor a un componente cliente o viceversa](https://react.dev/reference/rsc/use-server#serializable-parameters-and-return-values)
+
 
 
 ### Copia profunda (`structuredClone`)
