--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -380,7 +380,6 @@ La serialización es necesaria en los siguientes escenarios:
 
 - Al enviar información por la red
 - Al guardar información en un archivo
-- En algunos casos muy poco habituales, en NextJS, [al pasar información desde un componente servidor a un componente cliente o viceversa](https://react.dev/reference/rsc/use-server#serializable-parameters-and-return-values)
 
 
 **CÓMO Y CUÁNDO DESERIALIZAR**
@@ -393,7 +392,11 @@ La deserialización es necesaria en los siguientes escenarios:
 
 - Al recibir información de la red
 - Al leer información en un archivo
-- En algunos casos muy poco habituales, en NextJS, [al pasar información desde un componente servidor a un componente cliente o viceversa](https://react.dev/reference/rsc/use-server#serializable-parameters-and-return-values)
+
+
+> NOTA:
+>
+> En algunos casos muy poco habituales es necesario searializar/deserializar en [NextJS](https://nextjs.org/docs/app/building-your-application/data-fetching/server-actions-and-mutations)/[React](https://react.dev/reference/rsc/use-server#serializable-parameters-and-return-values) al pasar información desde un componente servidor a un componente cliente o viceversa.
 
 
 
