--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -256,6 +256,31 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 > let numOrdenadosInv = numeros.toSorted( (a,b) => b-a ); // Orden descendente    
 > ```
 
+
+> **IMPORTANTE**:
+> Para ordenar array que contengan **strings** usa el método **`localeCompare`**.
+>
+> ```js
+> let ciudades = [ "Ávila", "Almeria", "Albacete", "Álava" ]
+> ciudades.sort()                               // [ 'Albacete', 'Almeria', 'Álava', 'Ávila' ]
+> ciudades.sort( (a,b) => a.localeCompare(b) )  // [ 'Álava', 'Albacete', 'Almeria', 'Ávila' ]
+>```
+> 
+> También válido para array de objetos que contengan strings
+>
+> ```js
+> ciudades = [
+>  { nombre: 'Ávila', region: 'Castilla-La Mancha' },
+>  { nombre: 'Almeria', region: 'Andalucía' },
+>  { nombre: 'Albacete', region: 'Castilla-La Mancha' },
+>  { nombre: 'Álava', region: 'Castilla-La Mancha' }
+>]
+>
+> ciudades.sort ( (a,b) => a.nombre.localeCompare(b.nombre) )
+>  ```
+
+
+
 ### Crear elementos
 
 Javascript dispone del método **[Array.from](https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Global_Objects/Array/from)** que puede resultar muy útil en ciertos momentos, sobre todo si necesitamos crear arrays con un gran número de elementos.
