--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -256,9 +256,9 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 > let numOrdenadosInv = numeros.toSorted( (a,b) => b-a ); // Orden descendente    
 > ```
 
-
-> **IMPORTANTE**:
-> Para ordenar array que contengan **strings** usa el método **`localeCompare`**.
+> ⚠️**IMPORTANTE**:
+> 
+> Para ordenar un array que contenga **strings** usa el método **`localeCompare`**.
 >
 > ```js
 > let ciudades = [ "Ávila", "Almeria", "Albacete", "Álava" ]
@@ -266,7 +266,7 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 > ciudades.sort( (a,b) => a.localeCompare(b) )  // [ 'Álava', 'Albacete', 'Almeria', 'Ávila' ]
 >```
 > 
-> También válido para array de objetos que contengan strings
+> También válido para array de objetos que contenga strings
 >
 > ```js
 > ciudades = [
