--- a/01.INTRODUCCION.md
+++ b/01.INTRODUCCION.md
@@ -8,17 +8,23 @@ JavaScript fue inventado por Brendan Eich en 1995, y **se convirtió en un está
 
 ## Ediciones de ECMAScript
 
-| Año	 | Nombre         | Otros nombres | Descripción
-|------|----------------|---------------|--------------------------------
-| 1997 | ECMAScript 1   | ES1           | Primera publicación.
-| 1998 | ECMAScript 2   | ES2           | Solo cambios editoriales.
-| 1999 | ECMAScript 3   | ES3           | Regular Expressions. try/catch.
-|      | ECMAScript 4	  | ES4           | Nunca fue publicada.
-| 2009 | ECMAScript 5	  | ES5           | "strict mode". JSON support.
-| 2011 | ECMAScript 5.1 | ES5.1         | Cambios editoriales.
-| 2015 |**ECMAScript 6**   | **ES6, ES2015**   | Modulos, Clases, Funciones flecha, Template strings, ... 
-| 2016 | ECMAScript 7   | ES7, ES2016   | Exponential operator (\*\*). Array.prototype.includes.
-| 2017 | ECMAScript 8   | ES8, ES2017   | String padding, Object.values, Object.entries, Async functions, ...
+| Año	 | Nombre          | Otros nombres  | Descripción
+|------|-----------------|----------------|--------------------------------
+| 1997 | ECMAScript 1    | ES1            | Primera publicación.
+| 1998 | ECMAScript 2    | ES2            | Solo cambios editoriales.
+| 1999 | ECMAScript 3    | ES3            | Regular Expressions. try/catch.
+|      | ECMAScript 4	   | ES4            | Nunca fue publicada.
+| 2009 | ECMAScript 5	   | ES5            | "strict mode". JSON support.
+| 2011 | ECMAScript 5.1  | ES5.1          | Cambios editoriales.
+| **2015** |**ECMAScript 6**   | **ES6, ES2015**   | **let, const, Modulos, Clases, Funciones flecha, Template strings**
+| 2016 | ECMAScript 7    | ES7, ES2016    | **async/await**, operador exponencial (\*\*). Array.prototype.includes.
+| 2017 | ECMAScript 8    | ES8, ES2017    | Object.values, Object.entries
+| 2018 | ECMAScript 9    | ES9, ES2018    | Operador spread (...), parámetros rest (...)
+| 2019 | ECMAScript 10   | ES10, ES2019   | Array.flat(), Array.flatMap()
+| 2020 | ECMAScript 11   | ES11, ES2020   | Tipo BigInt, Operador de coalescencia nula (??)
+| 2021 | ECMAScript 12   | ES12, ES2021   | String.replaceAll(), Promise.any() 
+| 2022 | ECMAScript 13   | ES13, ES2022   | Top-level await
+| 2023 | ECMAScript 14   | ES14, ES2023   | Array.toSorted, Array.toReversed, Array.findLast, Array.findLastIndex
 
 De especial importancia es **ES6 o ES2015**.
 
@@ -28,4 +34,5 @@ De especial importancia es **ES6 o ES2015**.
 # Referencias
 
 - [Características de ES6 respecto a ES5](https://carlosazaustre.com/ecmascript-6-el-nuevo-estandar-de-javascript/)
-- [[en inglés] Información en Wikipedia](https://en.wikipedia.org/wiki/ECMAScript)
+- [Información en Wikipedia - en inglés](https://en.wikipedia.org/wiki/ECMAScript)
+- [Versiones de Javascript](https://www.geeksforgeeks.org/javascript-versions/)
