--- a/01.INTRODUCCION.md
+++ b/01.INTRODUCCION.md
@@ -17,7 +17,7 @@ JavaScript fue inventado por Brendan Eich en 1995, y **se convirtió en un está
 | 2009 | ECMAScript 5	   | ES5            | "strict mode". JSON support.
 | 2011 | ECMAScript 5.1  | ES5.1          | Cambios editoriales.
 | **2015** |**ECMAScript 6**   | **ES6, ES2015**   | **let, const, Modulos, Clases, Funciones flecha, Template strings**
-| 2016 | ECMAScript 7    | ES7, ES2016    | **async/await**, operador exponencial (\*\*). Array.prototype.includes.
+| 2016 | ECMAScript 7    | ES7, ES2016    | **async/await**, operador exponencial (\*\*). Array.includes.
 | 2017 | ECMAScript 8    | ES8, ES2017    | Object.values, Object.entries
 | 2018 | ECMAScript 9    | ES9, ES2018    | Operador spread (...), parámetros rest (...)
 | 2019 | ECMAScript 10   | ES10, ES2019   | Array.flat(), Array.flatMap()
